added new citations, small edits

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2645,6 +2645,23 @@
   number = {11}
 }
 
+@article{havauxTemperaturedependentAdjustmentThermal1996,
+  title = {Temperature-Dependent Adjustment of the Thermal Stability of Photosystem {{II}} in Vivo: Possible Involvement of Xanthophyll-Cycle Pigments},
+  shorttitle = {Temperature-Dependent Adjustment of the Thermal Stability of Photosystem {{II}} in Vivo},
+  author = {Havaux, Michel and Tardy, Florence},
+  date = {1996-09-01},
+  journaltitle = {Planta},
+  volume = {198},
+  pages = {324--333},
+  issn = {1432-2048},
+  doi = {10.1007/BF00620047},
+  url = {https://doi.org/10.1007/BF00620047},
+  urldate = {2021-07-04},
+  abstract = {Moderately elevated temperatures induce a rapid increase in the heat and light resistance of photosystem II (PSII) in higher-plant leaves. This phenomenon was studied in intact potato leaves exposed to 35 °C for 2 h, using chlorophyll fluorometry, kinetic and difference spectrophotometry and photoacoustics. The 35 °C treatment was observed to cause energetic uncoupling between carotenoids and chlorophylls: (i) the steady-state chlorophyll fluorescence emission excited by a blue light beam (490 nm) was noticeably reduced as compared to fluorescence elicited by orange light (590 nm) and (ii) the quantum yield for photosynthetic oxygen evolution in blue light (400–500 nm) was preferentially reduced relative to the quantum yield measured in red light (590–710 nm). Analysis of the chlorophyll-fluorescence and light-absorption characteristics of the heated leaves showed numerous analogies with the fluorescence and absorption changes associated with the light-induced xanthophyll cycle activity, indicating that the carotenoid species involved in the heat-induced pigment uncoupling could be the xanthophyll violaxanthin. More precisely, the 35 °C treatment was observed to accelerate and amplify the non-photochemical quenching of chlorophyll fluorescence (in both moderate red light and strong white light) and to cause an increase in leaf absorbance in the blue-green spectral region near 520 nm, as do strong light treatments which induce the massive conversion of violaxanthin to zeaxanthin. Interestingly, short exposure of potato leaves to strong light also provoked a significant increase in the stability of PSII to heat stress. It was also observed that photosynthetic electron transport was considerably more inhibited by chilling temperatures in 35 °C-treated leaves than in untreated leaves. Further, pre-exposure of potato leaves to 35 °C markedly increased the amplitude and the rate of light-induced changes in leaf absorbance at 505 nm (indicative of xanthophyll cycle activity), suggesting the possibility that moderately elevated temperature increased the accessibility of violaxanthin to the membrane-located de-epoxidase. This was supported by the quantitative analysis of the xanthophyll-cycle pigments before and after the 35 °C treatment, showing light-independent accumulation of zeaxanthin during mild heat stress. Based on these results, we propose that the rapid adjustment of the heat resistance of PSII may involve a modification of the interaction between violaxanthin and the light-harvesting complexes of PSII. As a consequence, the thermoresistance of PSII could be enhanced either directly through a conformational change of PSII or indirectly via a carotenoid-dependent modulation of membrane lipid fluidity.},
+  langid = {english},
+  number = {3}
+}
+
 @article{hernandezSimilarTemperatureDependence2020,
   title = {Similar Temperature Dependence of Photosynthetic Parameters in Sun and Shade Leaves of Three Tropical Tree Species},
   author = {Hernández, Georgia G. and Winter, Klaus and Slot, Martijn},
@@ -3244,6 +3261,23 @@
   keywords = {Anthropogenic climate change,Biodiversity,Climate change,Humidity,Leaves,Solar radiation,Summer,Trees},
   langid = {english},
   number = {8}
+}
+
+@article{kikuzawaSynthesisRelationshipsLeaf2006,
+  title = {Toward {{Synthesis}} of {{Relationships}} among {{Leaf Longevity}}, {{Instantaneous Photosynthetic Rate}}, {{Lifetime Leaf Carbon Gain}}, and the {{Gross Primary Production}} of {{Forests}}.},
+  author = {Kikuzawa, Kihachiro and Lechowicz, Martin J.},
+  date = {2006-09-01},
+  journaltitle = {The American Naturalist},
+  volume = {168},
+  pages = {373--383},
+  publisher = {{The University of Chicago Press}},
+  issn = {0003-0147},
+  doi = {10.1086/506954},
+  url = {https://www.journals.uchicago.edu/doi/10.1086/506954},
+  urldate = {2021-07-04},
+  abstract = {The assimilation of carbon by plant communities (gross primary production [GPP]) is a central concern in plant ecology as well as for our understanding of global climate change. As an alternative to traditional methods involving destructive harvests or time‐consuming measurements, we present a simple, general model for GPP as the product of the lifetime carbon gain by a single leaf, the daily leaf production rate, and the length of the favorable period for photosynthesis. To test the model, we estimated leaf lifetime carbon gain for 26 species using the concept of mean labor time for leaves (the part of each day the leaf functions to full capacity), average potential photosynthetic capacity over the leaf lifetime, and functional leaf longevity (leaf longevity discounted for periods within a year wholly unfavorable for photosynthesis). We found that the lifetime carbon gain of leaves was rather constant across species. Moreover, when foliar biomass was regressed against functional leaf longevity, aseasonal and seasonal forests fell on a single line, suggesting that the leaf production rate during favorable periods is not substantially different among forests in the world. The gross production of forest ecosystems then can be predicted to a first approximation simply by the annual duration of the period favorable for photosynthetic activity in any given region.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EWD5S8S3\\506954.html},
+  number = {3}
 }
 
 @article{kimCanopySkinTemperature2016,
