--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -200,15 +200,15 @@ and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fi
 
 ~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $ga$ ie. boundary layer conductance) and latent heat loss (via $gs$ ie. Stomatal conductance and $E$ ie evaporation)[@bonan_ecological_2016].
 
-$Ga$ and $Gs$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016]. However, low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low. Additionally, $T_{leaf}-T_{air}$ increases with humidity (Fig. `r fig_leaf_T`c) because reduced $ga$ stifles heat dissapation through $E$ and $gs$.
+$Ga$ and $Gs$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @PhotosyntheticAcclimationSimultaneous2004]. Low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low. Therefore, along with windspeed $T_{leaf}$ can fluctuate throughout the day. Additionally, $T_{leaf}-T_{air}$ increases with humidity (Fig. `r fig_leaf_T`c) because reduced $ga$ stifles heat dissapation through $E$ and $gs$.
 
 Latent heat loss through maximum $gs$, cools the leaf and decreases $T_{leaf}$-$T_{air}$, allowing coupling between leaf and air. However in conditions of low soil moisture during drought (Fig. `r fig_leaf_T`), greater temperature than $gs$ thermal optimum, and air dryness causing an increase in VPD, $gs$ becomes limited, thereby increasing $T_{leaf}$-$T_{air}$ [@bonan_ecological_2016]. Limitation to $gs$ can also exaggerate effects of biophysical factors that contribute to energy inputs such as, solar radiation, humidity and $T_{air}$ (Fig. `r fig_leaf_T`)[@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @dongBiophysicalHomoeostasisLeaf2017].
 
 Leaf size and physiology [see next section] influence $ga$, $gs$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer that enables coupling with $T_{air}$ through higher $ga$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T`a). Smaller leaves can also heat and cool faster and with adequate water, will be most effective at cooling during high temperatures than larger leaves [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007;@fauset_differences_2018]. However, under low raditation, large leaves can be cooler than small leaves due to greater $gs$ [@leighThickLeavesAvoid2012;@bonan_ecological_2016]. Sun leaves, such as in the upper canopies, tend to have greater $gs$, due to greater stomatal density [Table 1] and lower thermal capacitance due to lower water potential than shade leaves. But exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions [@millerOnlySunlitLeaves2021]. However, because shade leaves have higher thermal capacitance and comparitevly lower $gs$, when exposed to an increase in $T_{air}$, $T_{leaf}$-$T_{air}$ can become more elevated than sun leaves (Fig. `r fig_leaf_T`a)[@schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
 
 **Within forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
-$T_{leaf}$ generally tracks $T_{air}$, and in turn the vertical gradient of $T_{air}$ depends on canopy structure and $LAI$. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can be much warmer than below canopies layers [@millerOnlySunlitLeaves2021]. On the other hand, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013]. 
-It is also important to note that, NEON sites (in Fig. `r fig_NEON_vertical`) might not exactly reflect the $T_{leaf}$ pattern we might expect, partly because $T_{bio}$ measured using infrared sensor, reflects a wide swath of biological temperatures. But, recent advances in $T_{leaf}$ modelling that we outline [see Scaling across Space and Time], will enhance our understanding of large scale $T_leaf$ vertical patterns [@stillImagingCanopyTemperature].~~   
+$T_{leaf}$ generally tracks $T_{air}$, and in turn the vertical gradient of $T_{air}$ depends on canopy structure and $LAI$. Closed canopies, and high $LAI$ canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and $VPD$ can also limit $gs$, therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can be much warmer than below canopies layers [@millerOnlySunlitLeaves2021]. On the other hand, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013]. 
+It is also important to note that, NEON sites (in Fig. `r fig_NEON_vertical`) might not exactly reflect the $T_{leaf}$ pattern we might expect, partly because $T_{bio}$ measured using infrared sensor, reflects a wide swath of biological temperatures. But, recent advances in $T_{leaf}$ modelling that we outline [see Scaling across Space and Time], will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature].~~   
 
 **Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
@@ -280,14 +280,14 @@ Sun leaves in the exposed canopy have traits that help avoid heat and water stre
 #### Biochemical traits
 
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory. 
-Caratenoids and xanthophyll cycle pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high temperature impairs the photochemical energy dissipation pathway  [Havaux, M. and Tardy, F., 1996]. Elemental traits, such as N and P differ with soil conditions, but $N_{area}$ typically increases in the direction of new leaf growth, where its allocation is optimized to prevent photoinhibition in leaves [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes facilitate higher heat tolerance in exposed canopies in species capable of emitting isoprenes, providing these species with a selective advantage in a warming world [*REF*].
+Caratenoids and xanthophyll cycle pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high temperature impairs the photochemical energy dissipation pathway [@TemperaturedependentAdjustmentThermal1996]. Elemental traits, such as N and P differ with soil conditions, but leaf nitrogen distribution within a canopy can be regulated to prevent photoinhibition in shade leaves during sunlecks, and direct light for shade leaves [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes facilitate higher heat tolerance in exposed canopies in species capable of emitting isoprenes, providing these species with a selective advantage in a warming world [*REF*].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
 
 ##### *Leaf lifespan*  
 
-Leaf age affects vulnerability to heat stress independent of light environment [e.g. Marias et al. 2017], and has a strong effect on metabolism (Kikuzawa & Lechowitz, Kitajima et al.). Sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, they therefore operate closer to their photosynthetic optimum . However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy,  damage does not really accumulate [Miller et al. 2021]. The effect of leaf age on heat tolerance once leaves are fully expanded and mature, is XXX. 
+Leaf age affects vulnerability to heat stress independent of light environment [e.g. Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006]. Sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, they therefore operate closer to their photosynthetic optimum . However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy,  damage does not really accumulate [@millerOnlySunlitLeaves2021]. The effect of leaf age on heat tolerance once leaves are fully expanded and mature, is XXX. 
 
 ### Interspecific variation 
 
@@ -295,7 +295,7 @@ Widely, across forest species, the pattern of fundamental trait adaptation to li
 
 ##### *Deciduousness*
 
-Seasonal leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient in the forest [@rey-sanchez_spatial_2016]. Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. Within tropical species, the fraction of deciduous trees tends to increase across tree size classes, with understory species typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c; Meakem]. In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing-out earlier than canopy trees [Vitasse et al. 2013; @seiwaChangesLeafPhenology1999]. 
+Seasonal leaf-loss or -gain can alter biophysical and $T_{leaf}$ gradient in the forest [@rey-sanchez_spatial_2016]. Deciduousness in tropical forests is an adaptation to conserve water that is more common is dry than wet tropical forests. Within tropical species, the fraction of deciduous trees tends to increase across tree size classes, with understory species typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000]. In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing-out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999]. 
 
 ## Leaf metabolism and thermal responses
 
