--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -277,7 +277,9 @@ Sun leaves in the exposed canopy have traits that help avoid heat and water stre
 #### Biochemical traits
 
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory. 
-Caratenoids and xanthophyll cycle pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high temperature impairs the photochemical energy dissipation pathway [@TemperaturedependentAdjustmentThermal1996]. Elemental traits, such as N and P differ with soil conditions, but leaf nitrogen distribution within a canopy can be regulated to prevent photoinhibition in shade leaves during sunlecks, and direct light for shade leaves [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes facilitate higher heat tolerance in exposed canopies in species capable of emitting isoprenes, providing these species with a selective advantage in a warming world [*REF*].
+Caratenoids and xanthophyll cycle pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high temperature impairs the photochemical energy dissipation pathway [@TemperaturedependentAdjustmentThermal1996].
+
+Elemental traits, such as $N_{area}$ and $P_{area}$ contribute to high activities of leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves, where $V_{cmax}$ and $J_{max}$ [see next section]-- are linearly related to within-canopy foliar $N_{area}$ and light gradient (Table 1)[@scartazzaInvestigatingEuropeanBeech2016a;@niinemetsWithincanopyVariationRate2004;@weerasingheCanopyPositionAffects2014]. Evidence also shows that within canopy leaf nitrogen distribution is regulated to prevent photoinhibition in shade leaves during sunlecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Hence, we would expect elemental traits to influence vertical thermal sensitivity gradient. However, @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 suggested no relation between foliar thermal tolerance and total foliar concentrations of N and P, pointing towards further research to investigate elemental trait relation with vertical thermal sensivity. In species capable of emitting isoprenes, higher heat tolerance in exposed canopies is facilitated by isoprenes, providing these species with a selective advantage in a warming world [*REF*].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
