--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -285,7 +285,7 @@ Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to high activiti
 
 ##### *Leaf lifespan*  
 
-Leaf age affects vulnerability to heat stress independent of light environment [e.g. Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006]. Sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, they therefore operate closer to their photosynthetic optimum . However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy,  damage does not really accumulate [@millerOnlySunlitLeaves2021]. The effect of leaf age on heat tolerance once leaves are fully expanded and mature, is XXX. 
+Leaf age affects vulnerability to heat stress independent of light environment [e.g. Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006], including photosynthesis and respiration, and their temperature sensitivities [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016]. Sun leaves have shorter lifespans than shade leaves, and thus upper canopy leaves are on average younger than subcanopy leaves, therefore they operate closer to their photosynthetic optimum, with a few expections among species [@niinemetsLeafAgeDependent2016]. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, damage does not really accumulate [@millerOnlySunlitLeaves2021]. The effect of leaf age on heat tolerance once leaves are fully expanded and mature, is that heat tolerance decreases with increasing leaf age [@zhouLeafageEffectsTemperature2015], along with photosynthesis and $gs$ [@@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016]. In evergreen species, temperature responses of photosynthesis and in some cases temperature sensitivity of respiration ($Q_{10}$) [@zhouLeafageEffectsTemperature2015] have also been observed to be greater in younger than older leaves [@zhouLeafageEffectsTemperature2015]. Additionally, because older leaves reach maximum $T_{leaf}$ earlier than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015].
 
 ### Interspecific variation 
 
