--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5282,41 +5282,6 @@
   number = {3}
 }
 
-@article{niinemetsLeafAgeDependent2016a,
-  title = {Leaf Age Dependent Changes in Within-Canopy Variation in Leaf Functional Traits: A Meta-Analysis},
-  shorttitle = {Leaf Age Dependent Changes in Within-Canopy Variation in Leaf Functional Traits},
-  author = {Niinemets, Ülo},
-  date = {2016-05},
-  journaltitle = {J Plant Res},
-  volume = {129},
-  pages = {313--338},
-  issn = {0918-9440, 1618-0860},
-  doi = {10.1007/s10265-016-0815-2},
-  url = {http://link.springer.com/10.1007/s10265-016-0815-2},
-  urldate = {2020-08-30},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\FHVMNIIQ\\Niinemets - 2016 - Leaf age dependent changes in within-canopy variat.pdf},
-  langid = {english},
-  number = {3}
-}
-
-@article{niinemetsLeafAgeDependent2016b,
-  title = {Leaf Age Dependent Changes in Within-Canopy Variation in Leaf Functional Traits: A Meta-Analysis},
-  shorttitle = {Leaf Age Dependent Changes in Within-Canopy Variation in Leaf Functional Traits},
-  author = {Niinemets, Ülo},
-  date = {2016-05-01},
-  journaltitle = {J Plant Res},
-  volume = {129},
-  pages = {313--338},
-  issn = {1618-0860},
-  doi = {10.1007/s10265-016-0815-2},
-  url = {https://doi.org/10.1007/s10265-016-0815-2},
-  urldate = {2021-01-04},
-  abstract = {Within-canopy variation in leaf structural and photosynthetic characteristics is a major means by which whole canopy photosynthesis is maximized at given total canopy nitrogen. As key acclimatory modifications, leaf nitrogen content (NA) and photosynthetic capacity (AA) per unit area increase with increasing light availability in the canopy and these increases are associated with increases in leaf dry mass per unit area (MA) and/or nitrogen content per dry mass and/or allocation. However, leaf functional characteristics change with increasing leaf age during leaf development and aging, but the importance of these alterations for within-canopy trait gradients is unknown. I conducted a meta-analysis based on 71 canopies that were sampled at different time periods or, in evergreens, included measurements for different-aged leaves to understand how within-canopy variations in leaf traits (trait plasticity) depend on leaf age. The analysis demonstrated that in evergreen woody species, MA and NA plasticity decreased with increasing leaf age, but the change in AA plasticity was less suggesting a certain re-acclimation of AA to altered light. In deciduous woody species, MA and NA gradients in flush-type species increased during leaf development and were almost invariable through the rest of the season, while in continuously leaf-forming species, the trait gradients increased constantly with increasing leaf age. In forbs, NA plasticity increased, while in grasses, NA plasticity decreased with increasing leaf age, reflecting life form differences in age-dependent changes in light availability and in nitrogen resorption for growth of generative organs. Although more work is needed to improve the coverage of age-dependent plasticity changes in some plant life forms, I argue that the age-dependent variation in trait plasticity uncovered in this study is large enough to warrant incorporation in simulations of canopy photosynthesis through the growing period.},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\GQ3PVDCQ\\Niinemets - 2016 - Leaf age dependent changes in within-canopy variat.pdf},
-  langid = {english},
-  number = {3}
-}
-
 @article{niinemetsLeafShapeVenation2007,
   title = {Leaf Shape and Venation Pattern Alter the Support Investments within Leaf Lamina in Temperate Species: A Neglected Source of Leaf Physiological Differentiation?},
   shorttitle = {Leaf Shape and Venation Pattern Alter the Support Investments within Leaf Lamina in Temperate Species},
@@ -9287,22 +9252,6 @@
   langid = {english}
 }
 
-@article{zhangPhotosyntheticThermotoleranceWoody2012a,
-  title = {Photosynthetic Thermotolerance of Woody Savanna Species in {{China}} Is Correlated with Leaf Life Span},
-  author = {Zhang, Jiao-Lin and Poorter, L. and Hao, Guang-You and Cao, Kun-Fang},
-  date = {2012-10},
-  journaltitle = {Annals of Botany},
-  volume = {110},
-  pages = {1027--1033},
-  issn = {1095-8290, 0305-7364},
-  doi = {10.1093/aob/mcs172},
-  url = {https://academic.oup.com/aob/article-lookup/doi/10.1093/aob/mcs172},
-  urldate = {2020-07-17},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\IIXEWQUU\\LeafAge, Zhang et al. 2012.pdf},
-  langid = {english},
-  number = {5}
-}
-
 @article{zhangProductiveLeafFunctional2012,
   title = {Productive Leaf Functional Traits of {{Chinese}} Savanna Species},
   author = {Zhang, Jiao-Lin and Poorter, L. and Cao, Kun-Fang},
@@ -9318,6 +9267,22 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\VQ8Q6U95\\Zhang et al. - 2012 - Productive leaf functional traits of Chinese savan.pdf},
   langid = {english},
   number = {9}
+}
+
+@article{zhouLeafageEffectsTemperature2015,
+  title = {Leaf-Age Effects on Temperature Responses of Photosynthesis and Respiration of an Alpine Oak, {{Quercus}} Aquifolioides, in Southwestern {{China}}},
+  author = {Zhou, Haoran and Xu, Ming and Pan, Hongli and Yu, Xiubo},
+  date = {2015-11-01},
+  journaltitle = {Tree Physiology},
+  volume = {35},
+  pages = {1236--1248},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/tpv101},
+  url = {https://doi.org/10.1093/treephys/tpv101},
+  urldate = {2021-07-06},
+  abstract = {Temperature responses and sensitivity of photosynthesis (An\_T) and respiration for leaves at different ages are crucial to modeling ecosystem carbon (C) cycles and productivity of evergreen forests. Understanding the mechanisms and processes of temperature sensitivity may further shed lights on temperature acclimation of photosynthesis and respiration with leaf aging. The current study examined temperature responses of photosynthesis and respiration of young leaves (YLs) (fully expanded in current growth season) and old leaves (OLs) (fully expanded in last growth season) of Quercus aquifolioides Rehder and E.H. Wilson in an alpine oak forest, southwestern China. Temperature responses of dark respiration (Rdark), net assimilation (An), maximal velocity of carboxylation (Vcmax) and maximum rate of electron transport (Jmax) were significantly different between the two leaf ages. Those differences implied different temperature response parameters should be used for leaves of different ages in modeling vegetation productivity and ecosystem C cycles in Q. aquifolioides forests and other evergreen forests. We found that RuBP carboxylation determined the downward shift of An\_T in OLs, while RuBP regeneration and the balance between Rubisco carboxylation and RuBP regeneration made little contribution. Sensitivity of stomatal conductance to vapor pressure deficit changed in OLs and compensated part of the downward shift. We also found that OLs of Q. aquifolioides had lower An due to lower stomatal conductance, higher stomatal conductance limitation and deactivation of the biochemical processes. In addition, the balance between Rdark and An changed between OLs and YLs, which was represented by a higher Rdark/An ratio for OLs.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\HEKR4AWG\\Zhou et al. - 2015 - Leaf-age effects on temperature responses of photo.pdf;C\:\\Users\\Me\\Zotero\\storage\\RL48L8W8\\2364684.html},
+  number = {11}
 }
 
 @article{zhuAcclimationLeafRespiration2021,
@@ -9337,6 +9302,25 @@
   keywords = {climate change,metabolism,phenotypic plasticity,respiration modelling,thermal acclimation,thermal tolerance},
   langid = {english},
   number = {3}
+}
+
+@article{zhuPlasticityPhotosyntheticHeat2018,
+  title = {Plasticity of Photosynthetic Heat Tolerance in Plants Adapted to Thermally Contrasting Biomes},
+  author = {Zhu, Lingling and Bloomfield, Keith J. and Hocart, Charles H. and Egerton, John J. G. and O'Sullivan, Odhran S. and Penillard, Aurore and Weerasinghe, Lasantha K. and Atkin, Owen K.},
+  date = {2018},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {41},
+  pages = {1251--1262},
+  issn = {1365-3040},
+  doi = {10.1111/pce.13133},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.13133},
+  urldate = {2021-07-06},
+  abstract = {In many biomes, plants are subject to heatwaves, potentially causing irreversible damage to the photosynthetic apparatus. Field surveys have documented global, temperature-dependent patterns in photosynthetic heat tolerance (PHT); however, it remains unclear if these patterns reflect acclimation in PHT or inherent differences among species adapted to contrasting habitats. To address these unknowns, we quantified seasonal variations in Tcrit (high temperature where minimal chlorophyll-a fluorescence rises rapidly, reflecting disruption to photosystem II) in 62 species native to 6 sites from 5 thermally contrasting biomes across Australia. Tcrit and leaf fatty acid (FA) composition (important for membrane stability) were quantified in three temperature-controlled glasshouses in 20 of those species. Tcrit was greatest at hot field sites and acclimated seasonally (summer {$>$} winter, increasing on average 0.34 °C per °C increase in growth temperature). The glasshouse study showed that Tcrit was inherently higher in species from warmer habitats (increasing 0.16 °C per °C increase in origin annual mean maximum temperature) and acclimated to increasing growth temperature (0.24 °C °C−1). Variations in Tcrit were positively correlated with the relative abundance of saturated FAs, with FAs accounting for 40\% of Tcrit variation. These results highlight the importance of both plastic adjustments and inherent differences determining contemporary continent-wide patterns in PHT.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.13133},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\YS8C3W45\\Zhu et al. - 2018 - Plasticity of photosynthetic heat tolerance in pla.pdf},
+  keywords = {adaptation,fatty acids,high temperature,membranes,phenotypic plasticity,photosystem II,thermal tolerance},
+  langid = {english},
+  number = {6}
 }
 
 @article{zohnerOngoingSeasonallyUneven2019,
